force-app/main/default/objects/PMC_DH_FeatureVisibility__mdt/PMC_DH_FeatureVisibility__mdt.object-meta.xml
<CustomObject>
    <label>FeatureVisibility</label>
    <pluralLabel>Feature Visibilities</pluralLabel>
</CustomObject>