force-app/main/default/objects/PMC_DH_FeatureVisibility__mdt/fields/PMC_DH_CommercePermission__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_CommercePermission__c</fullName>
    <label>CommercePermission</label>
    <length>36</length>
    <type>Text</type>
</CustomField>