force-app/main/default/objects/PMC_DH_FeatureVisibility__mdt/fields/PMC_DH_Page__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Page__c</fullName>
    <label>Page</label>
    <length>18</length>
    <type>Text</type>
</CustomField>