force-app/main/default/objects/PMC_DH_FeatureVisibility__mdt/fields/PMC_DH_Tab_Order__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Tab_Order__c</fullName>
    <label>Tab Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>