force-app/main/default/objects/PMC_DH_FeatureVisibility__mdt/fields/PMC_DH_Value__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_Value__c</fullName>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>